--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic options
-title: Workshop Name
-short_name: workshop-name
-developers: [A name]
+title: Improve your R code
+short_name: Improve your R code
+developers: [J Shields E Hannon]
 description: One sentence description of workshop.
-n_sessions: 3
+n_sessions: 1
 prereq: NA
-url: https://uniexeterrse.github.io/repo-name
+url: https://uniexeterrse.github.io/improve-r-code
 
 # Specify that things in the episodes collection should be output.
 collections:
