--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Improve your R code
 short_name: Improve your R code
 developers: [J Shields E Hannon]
-description: One sentence description of workshop.
+description: Develop your scripts ready for sharing. 
 n_sessions: 1
 prereq: NA
 url: https://uniexeterrse.github.io/improve-r-code
